--- a/android-demo/src/main/res/values/strings.xml
+++ b/android-demo/src/main/res/values/strings.xml
@@ -10,6 +10,22 @@
     <string name="action_settings_title">Settings</string>
     <string name="action_about_title">About</string>
 
-    <string name="pref_header_general">General</string>
+    <string name="pref_general_title">General</string>
+    <string name="pref_stay_awake_title">Stay awake</string>
+    <string name="button_dismiss_text">Dismiss</string>
+    <string-array name="pref_stay_awake_titles">
+        <item>System default</item>
+        <item>1 minute</item>
+        <item>2 minutes</item>
+        <item>5 minutes</item>
+        <item>Indefinitely</item>
+    </string-array>
+    <string-array name="pref_stay_awake_values">
+        <item>-1</item>
+        <item>60</item>
+        <item>120</item>
+        <item>300</item>
+        <item>0</item>
+    </string-array>
 
 </resources>
