--- a/android-demo/src/main/res/values/strings.xml
+++ b/android-demo/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="pref_general_title">General</string>
     <string name="pref_stay_awake_title">Stay awake</string>
     <string name="button_dismiss_text">Dismiss</string>
+    <string name="card_info_title">Card</string>
+    <string name="terminal_info_title">Terminal</string>
     <string-array name="pref_stay_awake_titles">
         <item>System default</item>
         <item>1 minute</item>
