--- a/android-demo/src/main/res/values/strings.xml
+++ b/android-demo/src/main/res/values/strings.xml
@@ -12,9 +12,15 @@
 
     <string name="pref_general_title">General</string>
     <string name="pref_stay_awake_title">Stay awake</string>
-    <string name="button_dismiss_text">Dismiss</string>
+    <string name="pref_nfc_title">NFC</string>
+    <string name="pref_use_nfc_title">Use NFC</string>
+    <string name="pref_omapi_title">OMAPI</string>
+    <string name="pref_use_omapi_title">Use OMAPI</string>
+
     <string name="card_info_title">Card</string>
     <string name="terminal_info_title">Terminal</string>
+    <string name="button_dismiss_text">Dismiss</string>
+
     <string-array name="pref_stay_awake_titles">
         <item>System default</item>
         <item>1 minute</item>
